--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -44,4 +45,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
